--- a/templates/usuario.html
+++ b/templates/usuario.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="{{ url_for('static',filename='styles/main.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static',filename='styles/stylesTables.css') }}" rel="stylesheet">
     <title>Biblioteca</title>
 </head>
 
@@ -18,7 +18,7 @@
                 <a>CRUD<span>&rsaquo;</span></a>
                
                 <ul>
-                    <li><a href="">Autor</a></li>
+                    <li><a href="/">Autor</a></li>
                     <li><a href="libro">Libro</a></li>
                     <li><a href="edicion">Edición</a></li>
                     <li><a href="copia">Copia</a></li>
@@ -41,28 +41,44 @@
        </ul> 
     </nav>
     <div class="contenedor">
-        <h2>Autor</h2>
+        <h2>Usuario</h2>
         <form id="formulario" name="formulario" method="POST">
+            <div class="elemento">
+                <label for="rut">Rut</label>
+                <input type="text" id="rut" name="rut" required="true"/>
+            </div>
             <div class="elemento">
                 <label for="nombre">Nombre</label>
                 <input type="text" id="nombre" name="nombre" required="true"/>
             </div>
+           
+
             <div class="elemento">
                 <input type="submit" value="Agregar"/>
             </div>
+            <div class="elemento">
+                <input type="update" value="Actualizar"/>
+            </div>
+            
         </form>
     </div>
     <table id="autores">
         <tr>
+          <th>Rut</th>
           <th>Nombre</th>
+
         </tr>
-        {% for name,id in data.items() %}
         <tr>
-            <td>{{name}}</td>
-            <td class="btn_delete" href="/deleteAutor/{{id}}">eliminar</td>
+          <td>45938</td>
+          <td>Raul</td>
+          <td class="btn_delete">eliminar</td>
         </tr>
-        {% endfor %}
-      </table>
+        <tr>
+            <td>86996</td>
+            <td>Sebastian</td>
+            <td class="btn_delete">eliminar</td>
+            </tr>
+    </table>
       
 </body>
 
