--- a/templates/edicion.html
+++ b/templates/edicion.html
@@ -22,11 +22,11 @@
                
                 <ul>
                     <li><a href="/">Autor</a></li>
-                    <li><a href="libro">Libro</a></li>
-                    <li><a href="edicion">Edición</a></li>
-                    <li><a href="copia">Copia</a></li>
-                    <li><a href="usuario">Usuario</a></li>
-                    <li><a href="prestamo">Préstamo</a></li>
+                    <li><a href="/libro">Libro</a></li>
+                    <li><a href="/edicion">Edición</a></li>
+                    <li><a href="/copia">Copia</a></li>
+                    <li><a href="/usuario">Usuario</a></li>
+                    <li><a href="/prestamo">Préstamo</a></li>
                 </ul> 
             </li> 
             
