--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -39,7 +39,6 @@ nav ul{
 nav ul li a {
   display: flex;
   align-items: center;
-  font-family: arial;
   font-size: 1.15em;
   text-decoration: none;
   text-transform: capitalize;
@@ -53,6 +52,7 @@ nav ul li a:hover {
   height: 50px;
   width: 0px;
   color: #ffff;
+  text-decoration: underline;
 }
 
 
@@ -134,21 +134,6 @@ nav ul .menu:hover ul {
   font-size: 18px;
 }
 
-.contenedor .elemento input[type="submit"]{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: #FFC300;
-  border: none;
-  border-radius: 5px;
-  width: 15%;
-  letter-spacing: 2px;
-  cursor: pointer;
-  padding: 10px;
-  text-transform: uppercase;
-  margin-top: 30px;
-  font-weight: bold;
-}
 
 /*Tabla*/
 #autores {
@@ -182,10 +167,9 @@ nav ul .menu:hover ul {
   font-weight: bold;
 }
 
-td.btn_delete{
-  background-color: #ad0b06;
+#autores td.btn_select{
+  background-color: #ffc300;
   text-align: center;
-  border: none;
   width: 15%;
   letter-spacing: 2px;
   cursor: pointer;
@@ -195,4 +179,57 @@ td.btn_delete{
   font-size: 18px;
   margin-top: 30px;
   font-weight: bold;
+}
+
+#autores td.btn_delete{
+  background-color: #ad0b06;
+  text-align: center;
+  width: 15%;
+  letter-spacing: 2px;
+  cursor: pointer;
+  padding: 10px;
+  text-transform: capitalize;
+  color: white;
+  font-size: 18px;
+  margin-top: 30px;
+  font-weight: bold;
+}
+#autores a.sel{
+  font-weight: bold;
+  color: #003566;
+  text-decoration: none;
+}
+
+#autores a.del{
+  font-weight: bold;
+  text-decoration: none;
+  color: white;
+}
+
+.btn-group button {
+  background-color: #003566;
+  border: 1px solid #005FB8;
+  color: white;
+  padding: 10px 24px;
+  cursor: pointer;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-right: 15px;
+  margin-left: 15px;
+}
+
+.btn-group:after {
+  content: "";
+  clear: both;
+  display: flex;
+}
+
+.btn-group button:not(:last-child) {
+  border-right: none;
+}
+
+.btn-group button:hover {
+  background-color: #005FB8;
+  border: 1px solid #3599f7;
 }
